# ckanext-doi

./: .cz.toml  .gitignore  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENCE  README.md  dev_requirements.txt  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.ini
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/workflows/: main.yml  test_latest.yml  test_next.yml  tests.yml
ckanext/: __init__.py
ckanext/doi/: api.py  cli.py  config.py  datacite.py  exc.py  helpers.py  interfaces.py  lib.py  model.py  plugin.py
ckanext/doi/commands/: __init__.py  delete_test_doi.py  doi.py
ckanext/doi/lib/: api.py  errors.py  helpers.py  metadata.py  xml_utils.py
ckanext/doi/logic/: schema.py  validators.py
ckanext/doi/migration/: manage.py  migrate.cfg
ckanext/doi/migration/doi/: alembic.ini
ckanext/doi/migration/doi/versions/: 86a245a136db_initialisation.py  9b4a4cd0c97b_create_doi_tables.py
ckanext/doi/migration/versions/: 001_add-doi-published-date-column.py  002_delete-doi-created-column.py  _002_delete-doi-created-column.py
ckanext/doi/model/: __init__.py  crud.py  doi.py  repo.py
ckanext/doi/tests/: constants.py  test_api.py  test_db.py  test_doi.py  test_generate.py  test_schema.py
ckanext/doi/theme/templates/doi/snippets/: package_citation.html  resource_citation.html
ckanext/doi/theme/templates/package/: read.html  read_base.html  resource_read.html
ckanext/doi/theme/templates/package/snippets/: package_basic_fields.html  package_metadata_fields.html
docker/: Dockerfile  Dockerfile_latest  Dockerfile_next
docs/: index.md
docs/_scripts/: gen_api_pages.py
tests/: conftest.py  constants.py  test_api.py  test_db.py  test_generate.py  test_plugin.py
tests/helpers/: constants.py
